mail bildirim sistemi

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 DSL = root:Eses147852@tcp(127.0.0.1:3306)/hotel_management?parseTime=true
 JWT_KEY=58d88d7dbd4e3c2e8e8d827bef00e6b1e07b6a81
+EMAIL=EMAIL_ADRESS
+EMAIL_PASSWORD=EMAIL_PASSWORD
